@@ -8,6 +8,7 @@ import iti.jets.business.entities.Product;
 import iti.jets.persistence.connection.JPAManager;
 import iti.jets.persistence.repositories.CartRepo;
 import jakarta.persistence.EntityManager;
+
 import java.util.List;
 import java.util.Objects;
 import java.util.stream.Collectors;
@@ -15,21 +16,22 @@ import java.util.stream.Collectors;
 public class CartService {
 
     private final CartRepo cartRepo;
-    public CartService(){
+
+    public CartService() {
         EntityManager em = JPAManager.INSTANCE.getEntityManagerFactory().createEntityManager();
         cartRepo = new CartRepo(em);
     }
 
-    public void addProductToCart(Product product, Cart cart, int quantity){
-        if(quantity == 0)
+    public void addProductToCart(Product product, Cart cart, int quantity) {
+        if (quantity == 0)
             return;
 
         List<CartItem> cartItems = getCartItemsByCartId(cart.getId());
 
         //check if product is already exist in cart
-        for (CartItem cartItem: cartItems){
-            if (Objects.equals(cartItem.getProduct().getId(), product.getId())){
-                incrementCartItem(cartItem,quantity);
+        for (CartItem cartItem : cartItems) {
+            if (Objects.equals(cartItem.getProduct().getId(), product.getId())) {
+                incrementCartItem(cartItem, quantity);
                 return;
             }
         }
@@ -43,50 +45,59 @@ public class CartService {
         cartRepo.addItemToCart(newCartItem, cart.getId());
     }
 
-    public void deleteCartItem(int itemId){
+    public void deleteCartItem(int itemId) {
         cartRepo.deleteCartItem(itemId);
     }
 
-    public void incrementCartItem(CartItem cartItem, int quantity){
+    public void incrementCartItem(CartItem cartItem, int quantity) {
         cartItem.incrementCartItem(quantity);
         cartRepo.updateCartItem(cartItem);
     }
 
-    public void decrementCartItem(CartItem cartItem, int quantity){
+    public void decrementCartItem(CartItem cartItem, int quantity) {
         cartItem.decrementCartItem(quantity);
         cartRepo.updateCartItem(cartItem);
     }
 
-    public List<CartItem> getCartItemsByCartId(int cartId){
+    public List<CartItem> getCartItemsByCartId(int cartId) {
         return cartRepo.getCartItemsByCartId(cartId);
     }
 
-    public List<CartItemDto> getCartItemsByCustomerId(int customerId){
+    public List<CartItemDto> getCartItemsByCustomerId(int customerId) {
 
 
+        try {
 
-        List<CartItemDto> items = cartRepo.getCartItemsByCustomerId(customerId).stream()
-                .map(cartItem -> CartItemMapping.getInstance().mapEntityToDto(cartItem, CartItemDto.class))
-                .collect(Collectors.toList());
+            List<CartItemDto> items = cartRepo.getCartItemsByCustomerId(customerId).stream()
+                    .map(cartItem -> CartItemMapping.getInstance().mapEntityToDto(cartItem, CartItemDto.class))
+                    .toList();
 
-        System.out.println("items: " + items.size());
-        System.out.println("id: " + customerId);
-        for (CartItemDto item: items){
-            System.out.println("item: " + item.getQuantity());
+            for (CartItemDto item : items) {
+                System.out.println("item: " + item.getQuantity());
+            }
+
+            return items;
+        } catch (Exception e) {
+            e.printStackTrace();
+            throw new RuntimeException(e.getMessage());
         }
 
-        return items;
     }
 
-    public void updateCartItems(List<CartItemDto> cartItemDtos){
-        for(CartItemDto cartItemDto: cartItemDtos){
+    public void updateCartItems(List<CartItemDto> cartItemDtos) {
+        for (CartItemDto cartItemDto : cartItemDtos) {
             CartItem cartItem = cartRepo.findCartItemById(cartItemDto.getId());
-            if(!Objects.equals(cartItemDto.getQuantity(), cartItem.getQuantity())){
+            if (!Objects.equals(cartItemDto.getQuantity(), cartItem.getQuantity())) {
                 cartItem.setQuantity(cartItemDto.getQuantity());
                 cartRepo.updateCartItem(cartItem);
             }
 
         }
+    }
+
+    public void clearCart(int id){
+        Cart cart = cartRepo.getCartByCustomerId(id);
+        cartRepo.clearCart(cart);
     }
 
 }
